Replace custom ConformanceDelegate with Calcite's SqlDelegatingConformance
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>